--- a/.github/workflows/test-positive.yml
+++ b/.github/workflows/test-positive.yml
@@ -4,20 +4,28 @@ on:
 #  #
 #  # Added pull_request to register workflow from the PR.
 #  # Read more https://stackoverflow.com/questions/63362126/github-actions-how-to-run-a-workflow-created-on-a-non-master-branch-from-the-wo
-#  pull_request: {}
+  pull_request: {}
   workflow_dispatch: {}
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup
-        run: echo "Do setup"
+#  setup:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Setup
+#        run: echo "Do setup"
 
   test:
     runs-on: ubuntu-latest
     continue-on-error: true
     needs: [setup]
+    strategy:
+      matrix: 
+        flavor: ['pr-number', 'branch-name', 'custom']
+        app-name: ['namespace-builder']
+        prefix: ['cp']
+        name: ['', 'custom-name']
+        suffix: ['']
+        deny-list: ['']
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,15 +33,27 @@ jobs:
       - uses: ./
         id: current
         with:
-          param1: 'true'
+          flavor: ${{ matrix.flavor }}
+          app-name: ${{ matrix.app-name }}
+          prefix: ${{ matrix.prefix }}
+          name: ${{ matrix.name }}
+          suffix: ${{ matrix.suffix }}
+          deny-list: ${{ matrix.deny-list }}
 
     outputs:
-      result: "${{ steps.current.outputs.result1 }}"
+      ${{ matrix.flavor }}_${{ matrix.name }}_result: ${{ steps.current.outputs.kubernetes-namespace }}
 
   assert:
     runs-on: ubuntu-latest
     needs: [test]
     steps:
+      - run: echo ${{ needs.test.outputs }}
+      - run: echo ${{ needs.test.outputs["pr-number__result"] }}
+      - run: echo ${{ needs.test.outputs["pr-number_custom-name_result"] }}
+      - run: echo ${{ needs.test.outputs["branch-name__result"] }}
+      - run: echo ${{ needs.test.outputs["branch-name_custom-name_result"] }}
+      - run: echo ${{ needs.test.outputs["custom__result"] }}
+      - run: echo ${{ needs.test.outputs["custom_custom-name_result"] }}
       - uses: nick-fields/assert-action@v1
         with:
           expected: 'true'
