--- a/.github/workflows/test-positive.yml
+++ b/.github/workflows/test-positive.yml
@@ -34,7 +34,7 @@ jobs:
           flavor: ${{ matrix.flavor }}
           app-name: ${{ matrix.app-name }}
           prefix: ${{ matrix.prefix }}
-          name: ${{ matrix.flavor == 'custom' && 'custom-name' || '' }}
+          name: ${{ matrix.flavor == 'custom' && custom-name || '' }}
           suffix: ${{ matrix.suffix }}
           deny-list: ${{ matrix.deny-list }}
 
@@ -62,6 +62,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [read]
     steps:
+      - run: echo "DEBUG " ${{ fromJson(needs.read.outputs.result) }}
       - run: echo "PR namespace " ${{ fromJson(needs.read.outputs.result).result.pr-number }}
       - run: echo "Branch namespace " ${{ fromJson(needs.read.outputs.result).result.branch-name }}
       - run: echo "Custom namespace " ${{ fromJson(needs.read.outputs.result).result.custom }}
