--- a/.github/workflows/test-positive.yml
+++ b/.github/workflows/test-positive.yml
@@ -29,21 +29,59 @@ jobs:
         uses: actions/checkout@v3
 
       - uses: ./
-        id: current
+        name: Test PR Number
+        id: pr-number
         with:
-          flavor: ${{ matrix.flavor }}
-          app-name: ${{ matrix.app-name }}
-          prefix: ${{ matrix.prefix }}
-          name: ${{ matrix.flavor == 'custom' && 'custom-name' || '' }}
-          suffix: ${{ matrix.suffix }}
-          deny-list: ${{ matrix.deny-list }}
+          flavor: pr-number
+          app-name: app
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
 
       - run: echo "Current namespace '${{ steps.current.outputs.kubernetes-namespace }}'"
-#      - uses: nick-fields/assert-action@v1
-#        with:
-#          expected: '${{matrix.prefix}}-${{matrix.app-name}}-${{ matrix.flavor == "custom" && "custom-name" || matrix.flavor == pr-number "" }}-${{matrix.suffix}}'
-#          actual: "${{ steps.current.outputs.kubernetes-namespace }}"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-pr-'
+          comparison: startsWith
+          actual: "${{ steps.current.outputs.kubernetes-namespace }}"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: '-suffix'
+          comparison: endsWith
+          actual: "${{ steps.current.outputs.kubernetes-namespace }}"
+          
+      - uses: ./
+        name: Test branch name
+        id: pr-number
+        with:
+          flavor: branch-name
+          app-name: app
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
 
+      - run: echo "Current namespace '${{ steps.current.outputs.kubernetes-namespace }}'"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-pr-${{ github.head_ref }}'
+          actual: "${{ steps.current.outputs.kubernetes-namespace }}"
+          
+      - uses: ./
+        name: Test custom name
+        id: pr-number
+        with:
+          flavor: custom
+          app-name: app
+          name: foo
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
+
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-foo-suffix'
+          actual: "${{ steps.current.outputs.kubernetes-namespace }}"
+          
   teardown:
     runs-on: ubuntu-latest
     needs: [assert]
