--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -6,6 +6,6 @@ on:
 
 jobs:
   test:
-    runs-on: [ "self-hosted" ]
+    runs-on: ubuntu-latest
     steps:
       - uses: ./.github/workflows/test-positive.yml
