--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -10,4 +10,58 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: ./.github/workflows/test-positive.yml
+
+      - uses: ./
+        name: Test PR Number
+        id: pr-number
+        with:
+          flavor: pr-number
+          app-name: app
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
+
+      - run: echo "Current namespace '${{ steps.pr-number.outputs.kubernetes-namespace }}'"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-pr-'
+          comparison: startsWith
+          actual: "${{ steps.pr-number.outputs.kubernetes-namespace }}"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: '-suffix'
+          comparison: endsWith
+          actual: "${{ steps.pr-number.outputs.kubernetes-namespace }}"
+
+      - uses: ./
+        name: Test branch name
+        id: branch-name
+        with:
+          flavor: branch-name
+          app-name: app
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
+
+      - run: echo "Current namespace '${{ steps.branch-name.outputs.kubernetes-namespace }}'"
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-pr-${{ github.head_ref }}'
+          actual: "${{ steps.branch-name.outputs.kubernetes-namespace }}"
+
+      - uses: ./
+        name: Test custom name
+        id: custom-name
+        with:
+          flavor: custom
+          app-name: app
+          name: foo
+          prefix: cp
+          suffix: suffix
+          deny-list: kube-system,kube-public,default
+
+      - uses: nick-fields/assert-action@v1
+        with:
+          expected: 'cp-app-foo-suffix'
+          actual: "${{ steps.custom-name.outputs.kubernetes-namespace }}"
+          
