--- a/action.yml
+++ b/action.yml
@@ -38,7 +38,7 @@ inputs:
 outputs:
   kubernetes-namespace:
     description: "Output result placeholder"
-    value: "${{ steps.build-namespace.outputs.result }}"
+    value: ${{ steps.build-namespace.outputs.result }}
 
 runs:
   using: "composite"
