--- a/action.yml
+++ b/action.yml
@@ -34,7 +34,15 @@ inputs:
     required: false
     description: "Comma seperated list of strings to deny in the namespace name"
     default: "kube-system,kube-public,default"
-
+  
+  override-pr-number:
+    required: false
+    description: "Override the PR number, useful for manually helping calculate the PR number"
+    
+  override-branch-name:
+    required: false
+    description: "Override the branch name, useful for manually helping calculate the branch name"
+  
 outputs:
   kubernetes-namespace:
     description: "Generated kubernetes namespace"
@@ -61,13 +69,16 @@ runs:
       with:
         script: |
           if('${{inputs.flavor}}' === 'pr-number') {
+            if('${{inputs.override-pr-number}}' !== '') {
+              return 'pr-' + ${{inputs.override-pr-number}}
+            }
             const prNumber = context.payload.number;
             return 'pr-' + prNumber
           }
           
           if('${{inputs.flavor}}' === 'branch-name') {
-            console.log(context.payload.pull_request.base.ref)
-            const branchName = context.payload.pull_request.base.ref.replace('refs/heads/', '');
+            console.log(context.payload.pull_request.head.ref)
+            const branchName = context.payload.pull_request.head.ref.replace('refs/heads/', '');
             return branchName
           } 
           
