--- a/action.yml
+++ b/action.yml
@@ -95,6 +95,10 @@ runs:
         input-string: ${{steps.name-from-flavor.outputs.result}}
         operation: kebabcase
 
+    - shell: bash
+      run: |
+        echo "result=${{ steps.name.outputs.output-string }}"
+        
     - uses: cloudposse/github-action-string-transformer@main
       id: suffix
       with:
