--- a/action.yml
+++ b/action.yml
@@ -94,10 +94,21 @@ runs:
       with:
         input-string: ${{steps.name-from-flavor.outputs.result}}
         operation: 'kebabcase'
+    
+    - name: "debug" 
+      uses: cloudposse/github-action-string-transformer@main
+      id: debug
+      with:
+        operation: kebabcase
+        input-string: Hello World feature/UI-123_my-feature
+        max-length: -1
+
 
     - shell: bash
       run: |
-        echo "result=${{ steps.name.outputs.output-string }}"
+        echo Debug ${{ steps.debug.outputs.output-string }}
+        echo ${{ steps.name.outputs.output-string }}
+        
         
     - uses: cloudposse/github-action-string-transformer@main
       id: suffix
